--- a/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
+++ b/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\RosterViewModel.cs" />
     <Compile Include="Models\TeamsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -206,6 +207,7 @@
     <Content Include="Views\Player\Index.cshtml" />
     <Content Include="Views\Shared\_AddPlayerModal.cshtml" />
     <Content Include="Web.config" />
+    <Content Include="Views\Team\PlayersOnTeam.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
