--- a/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
+++ b/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\PlayersVM.cs" />
     <Compile Include="Models\TeamsViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
