--- a/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
+++ b/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
@@ -194,6 +194,7 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\app\addPlayer.js" />
     <Content Include="Scripts\app\addTeam.js" />
+    <Content Include="Scripts\app\filterByLeague.js" />
     <Content Include="Scripts\app\viewRoster.js" />
     <Content Include="Scripts\app\filterPlayersByTeamDropdown.js" />
     <Content Include="Scripts\app\SearchBar.js" />
