added 2nd document ready call, allows delete player modal to show. Needs data and a delete functionality.

--- a/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
+++ b/BaseballLeague/BaseballLeague.MVC/BaseballLeague.MVC.csproj
@@ -192,7 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Scripts\app\addPlayer.js" />
+    <Content Include="Scripts\app\viewManagePlayer.js" />
     <Content Include="Scripts\app\addTeam.js" />
     <Content Include="Scripts\app\deletePlayer.js" />
     <Content Include="Scripts\app\filterByLeague.js" />
